--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,91 @@
-# Core FastAPI
-fastapi>=0.104.1
-uvicorn[standard]>=0.24.0
-python-multipart>=0.0.6
-
-# Database
-sqlalchemy>=2.0.23
-
-# Authentication
-python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
-
-# Validation
-pydantic>=2.5.0
-email-validator>=2.0.0
-
-# Templates
-jinja2>=3.1.2
-
-# Visualization
-wordcloud>=1.9.3
-matplotlib>=3.8.2
-
-# Others
-python-dotenv>=1.0.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.0
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
+bcrypt==5.0.0
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+contourpy==1.3.2
+cryptography==46.0.3
+cycler==0.12.1
+dnspython==2.8.0
+ecdsa==0.19.1
+email-validator==2.3.0
+exceptiongroup==1.3.1
+fastapi==0.122.0
+filelock==3.20.0
+fonttools==4.61.0
+fsspec==2025.10.0
+greenlet==3.2.4
+h11==0.16.0
+hf-xet==1.2.0
+httptools==0.7.1
+huggingface-hub==0.36.0
+idna==3.11
+Jinja2==3.1.6
+joblib==1.5.2
+kiwisolver==1.4.9
+MarkupSafe==3.0.3
+matplotlib==3.10.7
+mpmath==1.3.0
+networkx==3.4.2
+nltk==3.9.2
+numpy==2.2.6
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.3.20
+nvidia-nvtx-cu12==12.8.90
+packaging==25.0
+passlib==1.7.4
+pillow==12.0.0
+pyasn1==0.6.1
+pycparser==2.23
+pydantic==2.12.5
+pydantic_core==2.41.5
+pyparsing==3.2.5
+python-crfsuite==0.9.11
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+python-jose==3.5.0
+python-multipart==0.0.20
+PyYAML==6.0.3
+regex==2025.11.3
+requests==2.32.5
+rsa==4.9.1
+safetensors==0.7.0
+scikit-learn==1.7.2
+scipy==1.15.3
+six==1.17.0
+SQLAlchemy==2.0.44
+starlette==0.50.0
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.22.1
+torch==2.9.1
+tqdm==4.67.1
+transformers==4.57.3
+triton==3.5.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+underthesea==8.3.0
+underthesea_core==1.0.5
+urllib3==2.5.0
+uvicorn==0.38.0
+uvloop==0.22.1
+watchfiles==1.1.1
+websockets==15.0.1
+wordcloud==1.9.4
