--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ anyio==4.12.0
 argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
 bcrypt==5.0.0
+reportlab==4.1.6
 certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
