Add passlib to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ psycopg2-binary>=2.9.9  # CRITICAL for PostgreSQL on Render
 
 # Authentication & Security
 python-jose[cryptography]>=3.3.0
+passlib>=1.7.4
 argon2-cffi>=23.1.0
 email-validator>=2.1.0
 
